[gd_scene load_steps=30 format=3 uid="uid://c02osq4shmuds"]

[ext_resource type="Script" uid="uid://cuh33xrrkypgo" path="res://scripts/CharacterBody2D.gd" id="1_4n72o"]
[ext_resource type="Script" uid="uid://bqahecyki2knv" path="res://scripts/SpecialObjects/Spring/SpringPlayer.gd" id="2_fxnmy"]
[ext_resource type="SpriteFrames" uid="uid://cwgm5uyuq1v14" path="res://characters/Player/playerSprite.tres" id="2_mcjp0"]
[ext_resource type="Texture2D" uid="uid://cfqvph6cgvh11" path="res://assets/Characters and Weapons/Shotgun.png" id="3_nq28v"]
[ext_resource type="Script" uid="uid://it1v86odvsx" path="res://scripts/SpecialObjects/Conveyor/ConveyorPlayer.gd" id="3_yachb"]
[ext_resource type="AudioStream" uid="uid://bfaeytss4l32a" path="res://assets/Sound Effects/Shotgun Shoot.wav" id="4_steuf"]
[ext_resource type="AudioStream" uid="uid://cdvxn1xnb2vb" path="res://assets/Sound Effects/Shotgun Reload.wav" id="5_8skxb"]
[ext_resource type="Shape2D" uid="uid://q0nvthlif00t" path="res://characters/Player/playerHitbox.tres" id="7_nubvs"]
[ext_resource type="Shape2D" uid="uid://md4gjc7hbhgn" path="res://characters/Player/deathHitbox.tres" id="7_tvtty"]

[sub_resource type="Animation" id="Animation_qtoe1"]
length = 0.1

[sub_resource type="Animation" id="Animation_8h62g"]
resource_name = "shoot"
length = 0.0175
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:gameSpeed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0175),
"transitions": PackedFloat32Array(100, 100),
"update": 0,
"values": [0.025, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_psxkt"]
_data = {
&"RESET": SubResource("Animation_qtoe1"),
&"shoot": SubResource("Animation_8h62g")
}

[sub_resource type="Animation" id="Animation_7gvu1"]
length = 0.001

[sub_resource type="Animation" id="Animation_ddu48"]
resource_name = "air"
loop_mode = 1

[sub_resource type="Animation" id="Animation_tfvm8"]
resource_name = "idle"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:spriteStretch")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4, 8),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [1.0, 0.87, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e6kjo"]
_data = {
&"RESET": SubResource("Animation_7gvu1"),
&"air": SubResource("Animation_ddu48"),
&"idle": SubResource("Animation_tfvm8")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_vfobt"]
atlas = ExtResource("3_nq28v")
region = Rect2(0, 0, 19, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvjd3"]
atlas = ExtResource("3_nq28v")
region = Rect2(95, 0, 19, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll0mv"]
atlas = ExtResource("3_nq28v")
region = Rect2(114, 0, 19, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvlct"]
atlas = ExtResource("3_nq28v")
region = Rect2(133, 0, 19, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jsv3"]
atlas = ExtResource("3_nq28v")
region = Rect2(19, 0, 19, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6cr6"]
atlas = ExtResource("3_nq28v")
region = Rect2(38, 0, 19, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm5ao"]
atlas = ExtResource("3_nq28v")
region = Rect2(57, 0, 19, 6)

[sub_resource type="SpriteFrames" id="SpriteFrames_7dwog"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfobt")
}],
"loop": true,
"name": &"shotgun_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvjd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll0mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvlct")
}],
"loop": false,
"name": &"shotgun_reload",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jsv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6cr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm5ao")
}],
"loop": false,
"name": &"shotgun_shoot",
"speed": 10.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_or0qs"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("4_steuf")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6yvid"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("5_8skxb")

[sub_resource type="Animation" id="Animation_erpmu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Offset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_mj0rk"]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Offset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(-10, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5spcg"]
_data = {
&"RESET": SubResource("Animation_erpmu"),
&"shoot": SubResource("Animation_mj0rk")
}

[node name="Player" type="CharacterBody2D"]
z_index = 4
position = Vector2(300, 0)
scale = Vector2(0.5, 0.5)
collision_layer = 2
collision_mask = 7
script = ExtResource("1_4n72o")
spriteStretch = 0.9116
gameSpeed = 0.025

[node name="Subscripts" type="Node2D" parent="."]

[node name="SpecialTiles" type="Node2D" parent="Subscripts"]

[node name="Spring" type="Node2D" parent="Subscripts/SpecialTiles"]
script = ExtResource("2_fxnmy")

[node name="Conveyor" type="Node2D" parent="Subscripts/SpecialTiles"]
script = ExtResource("3_yachb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_psxkt")
}

[node name="PlayerState" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_e6kjo")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_mcjp0")
animation = &"blink"
centered = false
offset = Vector2(-7, -5)

[node name="Gun" type="Node2D" parent="."]

[node name="Offset" type="Node2D" parent="Gun"]

[node name="GunSprite" type="AnimatedSprite2D" parent="Gun/Offset"]
position = Vector2(25, 0)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_7dwog")
animation = &"shotgun_idle"
autoplay = "shotgun_idle"

[node name="ShotgunShoot" type="AudioStreamPlayer" parent="Gun"]
stream = SubResource("AudioStreamRandomizer_or0qs")
volume_db = -5.0
pitch_scale = 1.1

[node name="ShotgunReload" type="AudioStreamPlayer" parent="Gun"]
stream = SubResource("AudioStreamRandomizer_6yvid")
volume_db = -10.0

[node name="GunAnimationPlayer" type="AnimationPlayer" parent="Gun"]
libraries = {
&"": SubResource("AnimationLibrary_5spcg")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(2, 2)
shape = ExtResource("7_nubvs")

[node name="DeathDetection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathDetection"]
rotation = 1.5708
scale = Vector2(2, 2)
shape = ExtResource("7_tvtty")
debug_color = Color(0.960784, 0, 0.521569, 0.419608)

[node name="InteractableDetection" type="Area2D" parent="."]
scale = Vector2(1.01, 1.01)
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableDetection"]
rotation = 1.5708
scale = Vector2(2, 2)
shape = ExtResource("7_nubvs")
debug_color = Color(0, 0.643137, 0.282353, 0.419608)

[node name="ShootCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="JustShotTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="Gun/Offset/GunSprite" to="." method="_on_gun_sprite_animation_finished"]
[connection signal="body_shape_entered" from="DeathDetection" to="." method="_on_death_detection_body_shape_entered"]
[connection signal="area_shape_entered" from="InteractableDetection" to="." method="_on_interactable_detection_area_shape_entered"]
[connection signal="body_shape_entered" from="InteractableDetection" to="." method="_on_interactable_detection_body_shape_entered"]
[connection signal="body_shape_exited" from="InteractableDetection" to="." method="_on_interactable_detection_body_shape_exited"]
[connection signal="timeout" from="ShootCooldownTimer" to="." method="_on_ShootCooldownTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="JustShotTimer" to="." method="_on_idle_timer_timeout"]
